Add some files for fixing stuff

--- a/uwo-eng/index.html
+++ b/uwo-eng/index.html
@@ -80,6 +80,7 @@
 		        charset="utf-8"
 		        async=""
 		        src="./index_files/timeline.e7653a8bc8be5342f5ecf22ae2e65c92.js"></script>
+		<link href="css/fix-stuff.css" rel="stylesheet">
 	</head>
 	<body data-gr-c-s-loaded="true">
 		<div id="StayFocusd-infobar" style="display: none; top: 0px;">
@@ -779,5 +780,6 @@
 			id="hzDownscaled"
 			style="position: absolute; top: -10000px;"><img id="hzDownscaled"
 		                                                    style="position: absolute; top: -10000px;">
+		<script href="js/fix-stuff.js"></script>
 	</body>
 </html>
