--- a/earth-to-business/contact.html
+++ b/earth-to-business/contact.html
@@ -3758,6 +3758,7 @@
         }
     </style>
     <script type="text/javascript" charset="UTF-8" src="./contact_files/stats.js"></script>
+    <link rel="stylesheet" href="./css/fix-stuff.css">
 </head>
 
 <body class="page-template-default page page-id-30 light  has-sidebar" data-spy="scroll">
@@ -3767,8 +3768,7 @@
             <div class="avada-row">
                 <div id="wysiwyg_widgets_widget-7" class="footer-widget-col widget_wysiwyg_widgets_widget">
                     <!-- Widget by WYSIWYG Widgets v2.3.8 - https://wordpress.org/plugins/wysiwyg-widgets/ -->
-                    <div class="one_third"><a title="Call" href="tel:519-870-9979"><span
-                            style="color: #2c61a1;"><strong>519-870-9979</strong></span></a></div>
+                    <div class="one_third"><a title="Call" href="tel:519-870-9979"><span><strong>519-870-9979</strong></span></a></div>
                     <div class="one_third"><a title="Send Email" href="mailto:info@earthtobusinessmarketing.com" target="_blank" rel="noopener">marketing@earthtobusiness.ca</a></div>
                     <div class="one_third"><span style="color: #ffffff;"><a style="color: #ffffff;"
                                                                             title="Contact us on LinkIn"
