--- a/earth-to-business/contact.html
+++ b/earth-to-business/contact.html
@@ -3944,6 +3944,9 @@
                         </div>
                         <div class="box request_form">
                             <h2>Request Form</h2>
+                            <p class="req_cu">
+                                Asterisk (<span class="req_cu" title="Required">*</span>) indicates required fields.
+                            </p>
                             <div role="form" class="wpcf7" id="wpcf7-f131-p30-o1" lang="en-US" dir="ltr">
                                 <div class="screen-reader-response"></div>
                                 <form action="https://earthtobusiness.ca/contact/#wpcf7-f131-p30-o1" method="post" class="wpcf7-form" novalidate="novalidate">
@@ -3954,60 +3957,61 @@
                                         <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f131-p30-o1">
                                         <input type="hidden" name="_wpcf7_container_post" value="30">
                                     </div>
-                                    <p>
-                                        <label>Name: <span class="req_cu"> * </span></label> <span class="wpcf7-form-control-wrap name"><input type="text" name="name" value=""
+                                    <div class="form-group">
+                                        <label for="name">Name: <span class="req_cu" title="Required"> * </span></label>
+                                        <span class="wpcf7-form-control-wrap name"><input type="text" id="name" name="name" value=""
                                                                                                                                                size="40"
                                                                                                                                                class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
-                                                                                                                                               aria-required="true"
-                                                                                                                                               aria-invalid="false"></span></p>
-                                    <p>
-                                        <label>Company: <span class="req_cu"> * </span></label> <span class="wpcf7-form-control-wrap organization"><input type="text"
+                                                                                                                                               aria-required="true" required
+                                                                                                                                               aria-invalid="false"></span></div>
+                                    <div class="form-group">
+                                        <label for="company">Company: <span class="req_cu" title="Required"> * </span></label> <span class="wpcf7-form-control-wrap organization"><input type="text" id="company"
                                                                                                                                                           name="organization"
                                                                                                                                                           value="" size="40"
                                                                                                                                                           class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
-                                                                                                                                                          aria-required="true"
+                                                                                                                                                          aria-required="true" required
                                                                                                                                                           aria-invalid="false"></span>
-                                    </p>
-                                    <p>
-                                        <label>Title: </label> <span class="wpcf7-form-control-wrap title1"><input
-                                            type="text" name="title1" value="" size="40"
-                                            class="wpcf7-form-control wpcf7-text" aria-invalid="false"></span></p>
-                                    <p>
-                                        <label>Email: <span class="req_cu"> * </span></label> <span class="wpcf7-form-control-wrap email"><input type="email" name="email"
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="title">Title: </label> <span class="wpcf7-form-control-wrap title1"><input
+                                            id="title" type="text" name="title1" value="" size="40"
+                                            class="wpcf7-form-control wpcf7-text" aria-invalid="false"></span></div>
+                                    <div class="form-group">
+                                        <label for="email">Email: <span class="req_cu" title="Required"> * </span></label> <span class="wpcf7-form-control-wrap email"><input id="email" type="email" name="email"
                                                                                                                                                  value="" size="40"
                                                                                                                                                  class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email"
-                                                                                                                                                 aria-required="true"
+                                                                                                                                                 aria-required="true" required
                                                                                                                                                  aria-invalid="false"></span>
-                                    </p>
-                                    <p>
-                                        <label>Phone: <span class="req_cu"> * </span></label> <span class="wpcf7-form-control-wrap phone"><input type="text" name="phone"
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="phone">Phone: <span class="req_cu" title="Required"> * </span></label> <span class="wpcf7-form-control-wrap phone"><input id="phone" type="tel" name="phone"
                                                                                                                                                  value="" size="40"
                                                                                                                                                  class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
-                                                                                                                                                 aria-required="true"
+                                                                                                                                                 aria-required="true" required
                                                                                                                                                  aria-invalid="false"></span>
-                                    </p>
-                                    <p>
-                                        <label>Subject: <span class="req_cu"> * </span></label> <span class="wpcf7-form-control-wrap request"><input type="text" name="request"
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="subject">Subject: <span class="req_cu" title="Required"> * </span></label> <span class="wpcf7-form-control-wrap request"><input type="text" name="request" id="subject"
                                                                                                                                                      value="" size="40"
                                                                                                                                                      class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
-                                                                                                                                                     aria-required="true"
+                                                                                                                                                     aria-required="true" required
                                                                                                                                                      aria-invalid="false"></span>
-                                    </p>
-                                    <p>
-                                        <label>Timeframe: </label> <span class="wpcf7-form-control-wrap timeframe"><input
-                                            type="text" name="timeframe" value="" size="40"
-                                            class="wpcf7-form-control wpcf7-text" aria-invalid="false"></span></p>
-                                    <p>
-                                        <label>Message: <span class="req_cu"> * </span></label> <span class="wpcf7-form-control-wrap message"><textarea name="message" cols="40"
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="timeframe">Timeframe: </label> <span class="wpcf7-form-control-wrap timeframe"><input
+                                            type="text" name="timeframe" value="" size="40" id="timeframe"
+                                            class="wpcf7-form-control wpcf7-text" aria-invalid="false"></span></div>
+                                    <div class="form-group">
+                                        <label for="message">Message: <span class="req_cu" title="Required"> * </span></label> <span class="wpcf7-form-control-wrap message"><textarea name="message"id="message" cols="40"
                                                                                                                                                         rows="10"
                                                                                                                                                         class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required"
-                                                                                                                                                        aria-required="true"
+                                                                                                                                                        aria-required="true" required
                                                                                                                                                         aria-invalid="false"></textarea></span>
-                                    </p>
+                                    </div>
 
 
-                                    <p><span class="req_cu"> * Required Fields </span>
-                                        <input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit"><span class="ajax-loader"></span></p>
+                                    <div class="form-group">
+                                        <input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit"><span class="ajax-loader"></span></div>
                                     <div class="wpcf7-response-output wpcf7-display-none"></div>
                                 </form>
                             </div>
